--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "@ionic/angular/css/normalize.css";
 @import "@ionic/angular/css/structure.css";
 @import "@ionic/angular/css/typography.css";
-@import '@ionic/angular/css/display.css';
+@import "@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "@ionic/angular/css/padding.css";
@@ -24,3 +24,29 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+.text {
+  &-light {
+    color: var(--ion-color-light);
+  }
+
+  &-medium {
+    color: var(--ion-color-medium);
+  }
+
+  &-dark {
+    color: var(--ion-color-dark);
+  }
+
+  &-success {
+    color: var(--ion-color-success);
+  }
+
+  &-danger {
+    color: var(--ion-color-danger);
+  }
+
+  &-warning {
+    color: var(--ion-color-warning);
+  }
+}
