--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,13 +1,65 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Sign In</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">login</ion-title>
+      <ion-title size="large">Sign In</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <app-logo></app-logo>
+
+  <section class="ion-padding">
+    <ion-text color="primary" class="ion-text-center subtitle">
+      <h3 class="inner-text">Welcome again!</h3>
+    </ion-text>
+
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <ion-input
+        class="ion-margin-bottom"
+        type="text"
+        fill="outline"
+        label="Email"
+        labelPlacement="stacked"
+        formControlName="email"
+        [errorText]="email.errors?.['required'] ? 'Email is required' : 'Invalid email'"
+      ></ion-input>
+
+      <app-password-toggler>
+        <ion-input
+          class="ion-margin-bottom"
+          type="password"
+          fill="outline"
+          label="Password"
+          labelPlacement="stacked"
+          formControlName="password"
+          [errorText]="password.errors?.['required'] ? 'Password is required' : 'Invalid password'"
+        ></ion-input>
+      </app-password-toggler>
+
+      <ion-button
+        type="submit"
+        expand="block"
+        fill="solid"
+        shape="round"
+        color="primary"
+      >
+        Sign in
+      </ion-button>
+
+      <ion-text color="medium" class="ion-text-center">
+        <p>
+          Don't have an account?
+          <a class="text-primary" [routerLink]="'/register'">Sign up</a>
+        </p>
+      </ion-text>
+    </form>
+  </section>
 </ion-content>
