--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay">
+    <ion-menu contentId="main-content" type="overlay" #menu>
       <ion-content>
         <ion-list id="inbox-list">
-          <ion-list-header>Inbox</ion-list-header>
-          <ion-note>hi@ionicframework.com</ion-note>
+          <ion-list-header>Prex movies</ion-list-header>
 
           <ion-menu-toggle
             auto-hide="false"
@@ -26,19 +25,18 @@
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
           </ion-menu-toggle>
-        </ion-list>
-
-        <ion-list id="labels-list">
-          <ion-list-header>Labels</ion-list-header>
-
-          <ion-item *ngFor="let label of labels" lines="none">
+          <ion-item
+            lines="none"
+            detail="false"
+            [button]="true"
+            (click)="menu.close(); onSignOut()"
+          >
             <ion-icon
-              aria-hidden="true"
               slot="start"
-              ios="bookmark-outline"
-              md="bookmark-sharp"
+              ios="log-out-outline"
+              md="log-out-sharp"
             ></ion-icon>
-            <ion-label>{{ label }}</ion-label>
+            <ion-label>Log out</ion-label>
           </ion-item>
         </ion-list>
       </ion-content>
