--- a/src/global.scss
+++ b/src/global.scss
@@ -50,3 +50,11 @@
     color: var(--ion-color-warning);
   }
 }
+
+ion-modal.floating {
+  --width: fit-content;
+  --min-width: 250px;
+  --height: fit-content;
+  --border-radius: 8px;
+  --backdrop-opacity: var(--ion-backdrop-opacity, 0.4) !important;
+}
