--- a/src/app/pages/details/details.page.html
+++ b/src/app/pages/details/details.page.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="cover">
-      <ion-img [src]="movie.coverUrl"></ion-img>
+      <ion-img [src]="movie.coverUrl" (ionError)="onImgError(movie)"></ion-img>
     </div>
 
     <div class="ion-padding">
