--- a/src/global.scss
+++ b/src/global.scss
@@ -54,6 +54,7 @@
 ion-modal.floating {
   --width: fit-content;
   --min-width: 250px;
+  --max-width: 90vw;
   --height: fit-content;
   --border-radius: 8px;
   --backdrop-opacity: var(--ion-backdrop-opacity, 0.4) !important;
