--- a/src/app/shared/components/advanced-filters/advanced-filters.component.html
+++ b/src/app/shared/components/advanced-filters/advanced-filters.component.html
@@ -38,7 +38,7 @@
       <ion-button>Clear filters</ion-button>
     </ion-buttons>
     <ion-buttons slot="primary" (click)="onSubmit()">
-      <ion-button>Accept and close</ion-button>
+      <ion-button color="primary">Accept and close</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </div>
