add logo animations

--- a/src/app/shared/components/logo/logo.component.html
+++ b/src/app/shared/components/logo/logo.component.html
@@ -1,5 +1,12 @@
-<ion-img
-  src="assets/img/logo.svg"
-  alt="Prex Movies logo"
-  class="ion-margin logo"
-></ion-img>
+<div class="wrapper">
+  <ion-img
+    src="assets/img/logo_l.svg"
+    alt="Prex Movies logo"
+    class="ion-margin logo-left"
+  ></ion-img>
+  <ion-img
+    src="assets/img/logo_r.svg"
+    alt="Prex Movies logo"
+    class="ion-margin logo-right"
+  ></ion-img>
+</div>
