implement logo animations

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -14,7 +14,7 @@
     </ion-toolbar>
   </ion-header>
 
-  <app-logo></app-logo>
+  <app-logo #logo></app-logo>
 
   <section class="ion-padding">
     <ion-text color="primary" class="ion-text-center subtitle">
