Add empty movies message
If there are no movies to display, a card is shown with a message, so the home page is not empty

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -35,7 +35,8 @@
 
   <main class="ion-padding">
     <app-movies-list
-      [movies]="movies$ | async | filterMovie:title:(advancedFilters$|async)"
+      *ngIf="movies$ | async as movies"
+      [movies]="movies | filterMovie:title:(advancedFilters$ | async)"
       (edit)="editMovie($event)"
     ></app-movies-list>
   </main>
