fix menu in home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <ion-app>
   <ion-split-pane contentId="main-content">
-    <ion-menu contentId="main-content" type="overlay" #menu>
+    <ion-menu
+      contentId="main-content"
+      type="overlay"
+      #menu
+      *ngIf="currentUser$ | async"
+    >
       <ion-content>
         <ion-list id="inbox-list">
           <ion-list-header>Prex movies</ion-list-header>
